[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wandb-cache"
version = "0.1.0"
description = "Small cache layer for W&B run metadata and table artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Bartek Cupial" },
]
keywords = ["wandb", "pandas", "parquet", "cache", "experiment-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas",
    "pyarrow",
    "wandb",
]

[project.urls]
Homepage = "https://github.com/BartekCupial/wandb-cache"
Issues = "https://github.com/BartekCupial/wandb-cache/issues"
Repository = "https://github.com/BartekCupial/wandb-cache"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "isort",
    "matplotlib",
    "pre-commit",
    "pytest",
    "ruff",
    "twine",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
